LPS-60925 Fixes the alignment DDL Form Builder Controls Button.

--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/main.scss
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/main.scss
@@ -626,16 +626,13 @@ $horizontal-spacing: 35px;
 	}
 
 	.form-builder-controls-trigger  {
-		$height: 48px;
-
 		display: block;
 		font-size: 20px;
-		height: $height;
-		margin-top: - $height / 2;
+		height: 48px;
 		padding: 12px;
 		position: absolute;
 		right: 0;
-		top: 50%;
+		top: 13px;
 
 		&:hover .icon-monospaced {
 			color: inherit;
@@ -746,13 +743,13 @@ $horizontal-spacing: 35px;
 
 	.form-builder-page-header {
 		position: relative;
+		padding-right: 34px;
 	}
 
 	.form-builder-pages-header {
 		margin-bottom: 0;
 		margin-top: 0;
 		padding-left: 34px;
-		padding-right: 34px;
 		width: auto;
 
 		.form-builder-page-header-description,
@@ -797,6 +794,10 @@ $horizontal-spacing: 35px;
 
 	.form-builder-tabview {
 		padding-right: 70px;
+
+		.form-builder-controls-trigger {
+			top: 34px;
+		}
 	}
 
 	.lfr-ddm-repeatable-add-button {
